[gd_scene load_steps=5 format=3 uid="uid://b4k8vrjb75hbj"]

[ext_resource type="Script" uid="uid://dabl04pop0u8t" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://c22a2mqj5d4fv" path="res://entities/bot/bot.tscn" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://25mhcfwjwdgq" path="res://resources/floor.png" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://dl7of4uhgf2xp" path="res://entities/item/item.tscn" id="4_jyhfs"]

[node name="main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="cycleTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="background" type="Node2D" parent="."]

[node name="Floor" type="Sprite2D" parent="background"]
position = Vector2(1010.53, 287.528)
scale = Vector2(0.794, 0.794)
texture = ExtResource("3_sugp2")

[node name="Floor2" type="Sprite2D" parent="background"]
position = Vector2(1729.53, 287.528)
scale = Vector2(0.794, 0.794)
texture = ExtResource("3_sugp2")

[node name="Floor3" type="Sprite2D" parent="background"]
position = Vector2(294.528, 286.528)
scale = Vector2(0.794, 0.794)
texture = ExtResource("3_sugp2")

[node name="Floor4" type="Sprite2D" parent="background"]
position = Vector2(1010.53, 1006.53)
scale = Vector2(0.794, 0.794)
texture = ExtResource("3_sugp2")

[node name="Floor5" type="Sprite2D" parent="background"]
position = Vector2(1729.53, 1006.53)
scale = Vector2(0.794, 0.794)
texture = ExtResource("3_sugp2")

[node name="Floor6" type="Sprite2D" parent="background"]
position = Vector2(294.528, 1005.53)
scale = Vector2(0.794, 0.794)
texture = ExtResource("3_sugp2")

[node name="bots" type="Node" parent="."]

[node name="bot" parent="bots" instance=ExtResource("2_sugp2")]
position = Vector2(960, 540)

[node name="bot2" parent="bots" instance=ExtResource("2_sugp2")]
position = Vector2(859, 234)
rotation = 1.57079
commands = Array[String](["down", "down", "grab", "up", "up", "release"])

[node name="bot3" parent="bots" instance=ExtResource("2_sugp2")]
position = Vector2(1163, 133)
rotation = 3.14159
commands = Array[String](["left", "left", "grab", "right", "right", "release"])

[node name="bot4" parent="bots" instance=ExtResource("2_sugp2")]
position = Vector2(1265, 440)
rotation = 4.71238
commands = Array[String](["up", "up", "grab", "down", "down", "release"])

[node name="Button" type="Button" parent="."]
offset_left = 52.0
offset_top = 58.0
offset_right = 103.0
offset_bottom = 89.0
text = "Start"

[node name="Button2" type="Button" parent="."]
offset_left = 53.0
offset_top = 106.0
offset_right = 104.0
offset_bottom = 137.0
text = "Stop"

[node name="item" parent="." instance=ExtResource("4_jyhfs")]
position = Vector2(1163, 441)

[connection signal="timeout" from="cycleTimer" to="." method="_on_cycle_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_stop_pressed"]
